Fix netlify.toml configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
-'[build]  
-    command = "python manage.py collectstatic --noinput && python manage.py migrate && gunicorn myportfolio.wsgi"  
-    publish = "staticfiles"
+[build]
+  command = "python manage.py collectstatic --noinput && python manage.py migrate && gunicorn myportfolio.wsgi"
+  publish = "staticfiles"
 
+[build.environment]
+  PYTHON_VERSION = "3.9"
 
-    [build.environment]  PYTHON_VERSION = "3.9"
-    
-    [[redirects]]  
-        from = "/*"  
-        to = "/index.html"  
-        status = 200' 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
