--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,15 @@
 [build]
-  command = "python manage.py collectstatic --noinput && python manage.py migrate && gunicorn myportfolio.wsgi"
+  command = "python manage.py migrate && gunicorn myportfolio.wsgi"
   publish = "staticfiles"
 
 [build.environment]
   PYTHON_VERSION = "3.8"
+
+[[plugins]]
+  package = "@netlify/plugin-cache"
+  config = {
+    command = "pip install -r requirements.txt"
+  }
 
 [[redirects]]
   from = "/*"
